--- a/style.css
+++ b/style.css
@@ -23,13 +23,27 @@
   text-align: center;
 }
 
-/* SOLUZIONE MEDIA QUERY */
+/* SOLUZIONE MEDIA QUERY  MOBILE*/
 @media screen and (max-width: 420px){
   .row{
     width: 100%;
   }
 }
 @media screen and (max-width: 420px){
+  #lezioni .row>.left,
+  #lezioni .row>.right{
+    width: 100%;
+    float: none;
+    margin-top: 50px;
+  }
+} 
+/* SOLUZIONE MEDIA QUERY  IPAD*/
+@media screen and (max-width: 768px){
+  .row{
+    width: 100%;
+  }
+}
+@media screen and (max-width: 768px){
   #lezioni .row>.left,
   #lezioni .row>.right{
     width: 100%;
@@ -69,7 +83,7 @@
   padding: 30px
 }
 
-/* SOLUZIONE */
+/* SOLUZIONE MEDIA QUERY MOBILE */
 @media screen and (max-width: 420px){
   #steps .row>.left,
   #steps .row>.central,
@@ -77,8 +91,18 @@
     float: none;
     width: 100%;
     margin-top: 50px;
-}
+  }
 } 
+/* SOLUZIONE MEDIA QUERY IPAD*/
+@media screen and (max-width: 768px){
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    float: none;
+    width: 100%;
+    margin-top: 50px;
+}
+}
 
 /* COMMON */
 .row::after {
@@ -98,3 +122,24 @@ img {
 .clear {
   clear: both;
 }
+/* SOLUZIONE */
+@media screen and (max-width: 420px){
+  .container{ 
+    width: 100%;
+
+  } 
+}  
+/* SOLUZIONE MEDIAQUERY MOBILE */
+@media screen and (max-width: 420px){
+  body{ 
+    font-size: 10px;
+    width: 100vw;
+  } 
+}  
+
+/* SOLUZIONE MEDIAQUERY IPAD */
+@media screen and (max-width: 768px){
+  body{ 
+    font-size: 30px;
+  } 
+}  
